--- a/index.html
+++ b/index.html
@@ -9,15 +9,143 @@
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="js/hammer.min.js"></script>
+		<script type="text/javascript" src="js/map.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 	</head>
+	
 	<body>
 		<div class="viewContainer">
 			<div class="mapView">
-				
+				<div id="mapElement"></div>
 			</div>
 			<div class="sideBar">
-				
+
+				<!-- //////////////// AREA INDICATOR //////////////// -->
+
+				<div class="topIndicator">
+					<div class="contentIndicator" id="sidebarPrograms">
+						<h1 class="horiCenter vertIndicatorCenter">Studiengänge</h1>
+					</div>
+					<div class="contentIndicator" id="sidebarServices">
+						<h1 class="horiCenter vertIndicatorCenter">Service</h1>
+					</div>
+				</div>
+
+				<!-- //////////////// PROGRAM CELLS //////////////// -->
+
+				<div class="sidebarContent">
+					<div class="programsContent">
+						<div class="programCell" id="pg">
+							<div class="programLabel">
+								<h1 class="vertCellCenter pgColor bold horiCenter">PG</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Produktgestaltung</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+						<div class="programCell" id="kg">
+							<div class="programLabel">
+								<h1 class="vertCellCenter kgColor bold horiCenter">KG</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Kommunikationsgestaltung</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+						<div class="programCell" id="ig">
+							<div class="programLabel">
+								<h1 class="vertCellCenter igColor bold horiCenter">IG</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Interaktionsgestaltung</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+						<div class="programCell" id="iot">
+							<div class="programLabel">
+								<h1 class="vertCellCenter iotColor bold horiCenter">IoT</h1>
+							</div>
+							<div class="programTitle ">
+								<h1 class="vertCellCenter floatLeft">Internet der Dinge</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+						<div class="programCell" id="sg">
+							<div class="programLabel">
+								<h1 class="vertCellCenter sgColor bold horiCenter">SG</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Strategische Gestaltung</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+					</div>
+					<div class="servicesContent">
+						<div class="programCell" id="toilets">
+							<div class="programLabel">
+								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Toiletten</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+						<div class="programCell" id="lift">
+							<div class="programLabel">
+								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Aufzüge</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+						<div class="programCell" id="food">
+							<div class="programLabel">
+								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Essen & Trinken</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+						<div class="programCell" id="info">
+							<div class="programLabel">
+								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+							</div>
+							<div class="programTitle">
+								<h1 class="vertCellCenter floatLeft">Information</h1>
+								<div class="chevron"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+
+			<!-- //////////////// CONTENT VIEW //////////////// -->
+
+			<div class="contentView">
+				<div class="semesterSelector">
+				</div>
+				<div class="semesterContentView">
+					<div class="fixedTitle">
+						<div class="programLabel" id="currentLabel">
+						</div>
+						<div class="programTitle" id="currentProgram">
+						</div>
+					</div>
+					<div class="semesterContentFrame">
+						<div class="semesterContent">
+						</div>
+					</div>
+				</div>
+			</div>
+			
 		</div>
+
+		<script type="text/javascript" src="js/database.js"></script>
+		<script type="text/javascript" src="json/plan.js"></script>
+		<script type="text/javascript" src="json/rooms.js"></script>
+
 	</body>
 </html>
