--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0"/>
+		<meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=0"/>
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<title>hfguide</title>
 		<link rel="stylesheet" href="css/reset.css">
@@ -34,8 +34,8 @@
 				<!-- //////////////// PROGRAM CELLS //////////////// -->
 
 				<div class="sidebarContent">
-					<div class="programsContent">
-						<div class="programCell" id="pg">
+					<ul class="programsContent">
+						<li class="programCell" id="pg">
 							<div class="programLabel">
 								<h1 class="vertCellCenter pgColor bold horiCenter">PG</h1>
 							</div>
@@ -43,8 +43,8 @@
 								<h1 class="vertCellCenter floatLeft">Produktgestaltung</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-						<div class="programCell" id="kg">
+						</li>
+						<li class="programCell" id="kg">
 							<div class="programLabel">
 								<h1 class="vertCellCenter kgColor bold horiCenter">KG</h1>
 							</div>
@@ -52,8 +52,8 @@
 								<h1 class="vertCellCenter floatLeft">Kommunikationsgestaltung</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-						<div class="programCell" id="ig">
+						</li>
+						<li class="programCell" id="ig">
 							<div class="programLabel">
 								<h1 class="vertCellCenter igColor bold horiCenter">IG</h1>
 							</div>
@@ -61,8 +61,8 @@
 								<h1 class="vertCellCenter floatLeft">Interaktionsgestaltung</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-						<div class="programCell" id="iot">
+						</li>
+						<li class="programCell" id="iot">
 							<div class="programLabel">
 								<h1 class="vertCellCenter iotColor bold horiCenter">IoT</h1>
 							</div>
@@ -70,8 +70,8 @@
 								<h1 class="vertCellCenter floatLeft">Internet der Dinge</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-						<div class="programCell" id="sg">
+						</li>
+						<li class="programCell" id="sg">
 							<div class="programLabel">
 								<h1 class="vertCellCenter sgColor bold horiCenter">SG</h1>
 							</div>
@@ -79,10 +79,10 @@
 								<h1 class="vertCellCenter floatLeft">Strategische Gestaltung</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-					</div>
-					<div class="servicesContent">
-						<div class="programCell" id="toilets">
+						</li>
+					</ul>
+					<ul class="servicesContent">
+						<li class="programCell" id="toilets">
 							<div class="programLabel">
 								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
 							</div>
@@ -90,8 +90,8 @@
 								<h1 class="vertCellCenter floatLeft">Toiletten</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-						<div class="programCell" id="lift">
+						</li>
+						<li class="programCell" id="lift">
 							<div class="programLabel">
 								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
 							</div>
@@ -99,8 +99,8 @@
 								<h1 class="vertCellCenter floatLeft">Aufzüge</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-						<div class="programCell" id="food">
+						</li>
+						<li class="programCell" id="food">
 							<div class="programLabel">
 								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
 							</div>
@@ -108,8 +108,8 @@
 								<h1 class="vertCellCenter floatLeft">Essen & Trinken</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-						<div class="programCell" id="info">
+						</li>
+						<li class="programCell" id="info">
 							<div class="programLabel">
 								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
 							</div>
@@ -117,8 +117,8 @@
 								<h1 class="vertCellCenter floatLeft">Information</h1>
 								<div class="chevron"></div>
 							</div>
-						</div>
-					</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 
