--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<ul class="servicesContent">
 						<li class="programCell" id="toilets">
 							<div class="programLabel">
-								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+								<div class="sidebarIcon" id="toiletsIcon"></div>
 							</div>
 							<div class="programTitle">
 								<h1 class="vertCellCenter floatLeft">Toiletten</h1>
@@ -93,7 +93,7 @@
 						</li>
 						<li class="programCell" id="lift">
 							<div class="programLabel">
-								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+								<div class="sidebarIcon" id="liftIcon"></div>
 							</div>
 							<div class="programTitle">
 								<h1 class="vertCellCenter floatLeft">Aufzüge</h1>
@@ -102,7 +102,7 @@
 						</li>
 						<li class="programCell" id="food">
 							<div class="programLabel">
-								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+								<div class="sidebarIcon" id="foodIcon"></div>
 							</div>
 							<div class="programTitle">
 								<h1 class="vertCellCenter floatLeft">Essen & Trinken</h1>
@@ -111,7 +111,7 @@
 						</li>
 						<li class="programCell" id="info">
 							<div class="programLabel">
-								<h1 class="vertCellCenter bold horiCenter">ICON</h1>
+								<div class="sidebarIcon" id="infoIcon"></div>
 							</div>
 							<div class="programTitle">
 								<h1 class="vertCellCenter floatLeft">Information</h1>
