--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 				<!-- //////////////// AREA INDICATOR //////////////// -->
 
 				<div class="topIndicator">
-					<div class="contentIndicator" id="sidebarPrograms">
+					<div class="contentIndicator borderRight" id="programsSidebar">
 						<h1 class="horiCenter vertIndicatorCenter">Studiengänge</h1>
 					</div>
-					<div class="contentIndicator" id="sidebarServices">
+					<div class="contentIndicator" id="servicesSidebar">
 						<h1 class="horiCenter vertIndicatorCenter">Service</h1>
 					</div>
 				</div>
