--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 		<script type="text/javascript" src="js/hammer.min.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/roomHandler.js"></script>
 	</head>
 	
 	<body>
 		<div class="viewContainer">
 			<div class="mapView">
-				<div id="mapElement"></div>
+				<div id="mapElement">
+					<div class="room" id="room1"></div>
+				</div>
 			</div>
-			
+
 			<div class="sideBar">
 
 				<!-- //////////////// AREA INDICATOR //////////////// -->
