--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 		<title>hfguide</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/roomPlan.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="js/hammer.min.js"></script>
-		<script type="text/javascript" src="js/map.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/roomHandler.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/map.js"></script>
+
+
 	</head>
 	
 	<body>
 		<div class="viewContainer">
 			<div class="mapView">
 				<div id="mapElement">
-					<div class="room" id="room1"></div>
+
 				</div>
 			</div>
 
