-implemented clickable rooms

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 		<title>hfguide</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/roomPlan.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="js/hammer.min.js"></script>
-		<script type="text/javascript" src="js/roomHandler.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
 
@@ -153,6 +151,7 @@
 		<script type="text/javascript" src="js/database.js"></script>
 		<script type="text/javascript" src="json/plan.js"></script>
 		<script type="text/javascript" src="json/rooms.js"></script>
+		<script type="text/javascript" src="json/roomLocation.js"></script>
 
 	</body>
 </html>
