-added room functionality to clickable rooms

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 		<script type="text/javascript" src="js/hammer.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
-
-
 	</head>
 	
 	<body>
@@ -152,6 +150,7 @@
 		<script type="text/javascript" src="json/plan.js"></script>
 		<script type="text/javascript" src="json/rooms.js"></script>
 		<script type="text/javascript" src="json/roomLocation.js"></script>
+		<!--<script type="text/javascript" src="json/roomContet.js"></script>-->
 
 	</body>
 </html>
