--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="js/hammer.min.js"></script>
+		<script type="text/javascript" src="js/popUp.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
 	</head>
@@ -18,6 +19,9 @@
 			<div class="mapView">
 				<div id="mapElement">
 
+				</div>
+				<div class="popUpSpace">
+					
 				</div>
 			</div>
 
@@ -150,7 +154,6 @@
 		<script type="text/javascript" src="json/plan.js"></script>
 		<script type="text/javascript" src="json/rooms.js"></script>
 		<script type="text/javascript" src="json/roomLocation.js"></script>
-		<!--<script type="text/javascript" src="json/roomContet.js"></script>-->
 
 	</body>
 </html>
