--- a/other.pgbomit/index.html
+++ b/other.pgbomit/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=0"/>
+		<meta charset="utf-8" />
+		<meta name="format-detection" content="telephone=no" />
+		<meta name="msapplication-tap-highlight" content="no" />
+		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<title>hfguide</title>
+		<title>HfGuide</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
@@ -148,6 +150,12 @@
 			</div>
 			
 		</div>
+
+		<script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript">
+			app.initialize();
+		</script>
 
 		<script type="text/javascript" src="js/database.js"></script>
 		<script type="text/javascript" src="json/plan.js"></script>
