--- a/www/index.html
+++ b/www/index.html
@@ -11,16 +11,21 @@
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="js/hammer.min.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
-		<script type="text/javascript" src="js/map.js"></script>
 	</head>
 	
 	<body>
 		<div class="viewContainer">
 			<div class="mapView">
-				<div id="mapElement">
+				<div class="mapElement active" id="floor1">
 
 				</div>
+				<!--<div class="mapElement" id="floor2">
+
+				</div>
+				<div class="mapElement" id="floor3">
+
+				</div>-->
+
 				<div class="popUpSpace">
 					
 				</div>
@@ -157,11 +162,18 @@
 			app.initialize();
 		</script>
 
+		<script type="text/javascript" src="js/map.js"></script> 
+		<script type="text/javascript" src="js/app.js"></script>
+
+
 		<script type="text/javascript" src="js/database.js"></script>
 		<script type="text/javascript" src="json/plan.js"></script>
 		<script type="text/javascript" src="json/rooms.js"></script>
 		<script type="text/javascript" src="json/roomLocation.js"></script>
 		<script type="text/javascript" src="js/popUp.js"></script>
+		
+
+
 
 	</body>
 </html>
