--- a/www/index.html
+++ b/www/index.html
@@ -17,19 +17,33 @@
 	<body>
 		<div class="viewContainer">
 			<div class="mapView">
-				<div class="mapElement active" id="floor1">
+				<div class="mapElement lower" id="floor1">
 					<canvas id="myCanvas" width="500" height="100" style="float:left;"></canvas>
-					<!--<div class="routeHall" id="hall1"></div>
-					<div class="routeHall" id="hall2"></div>-->
+					<div class="routeHall" id="hall1"></div>
+					<div class="routeHall" id="hall2"></div>
 					<div class="currentLocation"></div>
 					<!--<div class="routeLine"></div>-->
 				</div>
-				<!--<div class="mapElement" id="floor2">
+				<div class="mapElement active" id="floor2">
 
 				</div>
-				<div class="mapElement" id="floor3">
+				<div class="mapElement upper" id="floor3">
 
-				</div>-->
+				</div>
+
+				<div class="floorSwitcher">
+					<div class="floorButtons">
+						<div class="floorButton" id="switch3">
+							<h1>OG 2</h1>
+						</div>
+						<div class="floorButton" id="switch2">
+							<h1>OG 1</h1>
+						</div>
+						<div class="floorButton" id="switch1">
+							<h1>EG 0</h1>
+						</div>
+					</div>
+				</div>
 
 				<div class="popUpSpace">
 					
