--- a/www/index.html
+++ b/www/index.html
@@ -30,9 +30,15 @@
 				<div class="mapElement upper" id="floor3">
 
 				</div>
+				<div class="mapElement upper" id="floor4">
+
+				</div>
 
 				<div class="floorSwitcher">
 					<div class="floorButtons">
+						<div class="floorButton" id="switch4">
+							<h1>OG 3</h1>
+						</div>
 						<div class="floorButton" id="switch3">
 							<h1>OG 2</h1>
 						</div>
