-fixed sidebar issues

--- a/www/index.html
+++ b/www/index.html
@@ -120,7 +120,7 @@
 						</li>
 					</ul>
 					<ul class="servicesContent">
-						<li class="programCell" id="toilets">
+						<li class="serviceCell" id="toilets">
 							<div class="programLabel">
 								<div class="sidebarIcon" id="toiletsIcon"></div>
 							</div>
@@ -129,7 +129,7 @@
 								<div class="chevron"></div>
 							</div>
 						</li>
-						<li class="programCell" id="lift">
+						<li class="serviceCell" id="lift">
 							<div class="programLabel">
 								<div class="sidebarIcon" id="liftIcon"></div>
 							</div>
@@ -138,7 +138,7 @@
 								<div class="chevron"></div>
 							</div>
 						</li>
-						<li class="programCell" id="food">
+						<li class="serviceCell" id="food">
 							<div class="programLabel">
 								<div class="sidebarIcon" id="foodIcon"></div>
 							</div>
@@ -147,7 +147,7 @@
 								<div class="chevron"></div>
 							</div>
 						</li>
-						<li class="programCell" id="info">
+						<li class="serviceCell" id="info">
 							<div class="programLabel">
 								<div class="sidebarIcon" id="infoIcon"></div>
 							</div>
