--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
 
 				<div class="sidebarContent">
 					<ul class="programsContent">
-						<li class="programCell" id="pg">
+						<li class="programCell" id="pg0">
 							<div class="programLabel">
 								<h1 class="vertCellCenter pgColor bold horiCenter">PG</h1>
 							</div>
@@ -82,7 +82,7 @@
 								<div class="chevron"></div>
 							</div>
 						</li>
-						<li class="programCell" id="kg">
+						<li class="programCell" id="kg0">
 							<div class="programLabel">
 								<h1 class="vertCellCenter kgColor bold horiCenter">KG</h1>
 							</div>
@@ -91,7 +91,7 @@
 								<div class="chevron"></div>
 							</div>
 						</li>
-						<li class="programCell" id="ig">
+						<li class="programCell" id="ig0">
 							<div class="programLabel">
 								<h1 class="vertCellCenter igColor bold horiCenter">IG</h1>
 							</div>
@@ -100,7 +100,7 @@
 								<div class="chevron"></div>
 							</div>
 						</li>
-						<li class="programCell" id="iot">
+						<li class="programCell" id="iot0">
 							<div class="programLabel">
 								<h1 class="vertCellCenter iotColor bold horiCenter">IoT</h1>
 							</div>
@@ -109,7 +109,7 @@
 								<div class="chevron"></div>
 							</div>
 						</li>
-						<li class="programCell" id="sg">
+						<li class="programCell" id="sg0">
 							<div class="programLabel">
 								<h1 class="vertCellCenter sgColor bold horiCenter">SG</h1>
 							</div>
@@ -187,16 +187,16 @@
 		<script type="text/javascript">
 			app.initialize();
 		</script>
-
+		<script type="text/javascript" src="js/database.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
+		
+		<script type="text/javascript" src="js/popUp.js"></script>
 		<script type="text/javascript" src="js/route.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 
-		<script type="text/javascript" src="js/database.js"></script>
 		<script type="text/javascript" src="json/plan.js"></script>
 		<script type="text/javascript" src="json/rooms.js"></script>
 		<script type="text/javascript" src="json/roomLocation.js"></script>
-		<script type="text/javascript" src="js/popUp.js"></script>
 		
 
 
