-fixed floor transition

--- a/www/index.html
+++ b/www/index.html
@@ -9,20 +9,23 @@
 		<title>HfGuide</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<script type="text/javascript" src="js/global.js"></script>
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="js/hammer.min.js"></script>
 		<script type="text/javascript" src="js/simpleDraw.js"></script>
+		<script type="text/javascript" src="js/mapImg.js"></script>
+		<script type="text/javascript" src="js/floors.js"></script>
 	</head>
 	
 	<body>
 		<div class="viewContainer">
 			<div class="mapView">
 				<div class="mapElement lower" id="floor1">
-					<canvas id="myCanvas" width="500" height="100" style="float:left;"></canvas>
+					<!--<canvas id="myCanvas" width="500" height="100" style="float:left;"></canvas>
 					<div class="routeHall" id="hall1"></div>
 					<div class="routeHall" id="hall2"></div>
 					<div class="currentLocation"></div>
-					<!--<div class="routeLine"></div>-->
+					<div class="routeLine"></div>-->
 				</div>
 				<div class="mapElement active" id="floor2">
 
