--- a/www/index.html
+++ b/www/index.html
@@ -41,12 +41,12 @@
 		</div>
 		<div class="viewContainer" style="display: none;">
 			<div class="mapView">
-				<div class="mapElement lower" id="floor1">
-					<!--<canvas id="myCanvas" width="500" height="100" style="float:left;"></canvas>
+				<!--<div class="mapElement lower" id="floor1">
+					<canvas id="myCanvas" width="500" height="100" style="float:left;"></canvas>
 					<div class="routeHall" id="hall1"></div>
 					<div class="routeHall" id="hall2"></div>
 					<div class="currentLocation"></div>
-					<div class="routeLine"></div>-->
+					<div class="routeLine"></div>
 				</div>
 				<div class="mapElement active" id="floor2">
 
@@ -57,6 +57,7 @@
 				<div class="mapElement upper" id="floor4">
 
 				</div>
+
 
 				<div class="floorSwitcher">
 					<div class="floorButtons">
@@ -74,6 +75,7 @@
 						</div>
 					</div>
 				</div>
+				-->
 			</div>
 
 			<div class="sideBar">
