--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 	<body>
 		<div class="settingsContainer">
 			<div class="settingsHeader">
-				<h1>Hochschule für Gestaltung - Informations- und Navigationssytem</h1>
+				<div class="hfgLogo"></div>
 			</div>
 			<div class="buildingSelector">
 				<div class="settingsButton" id="H">
@@ -36,7 +36,7 @@
 
 			</div>
 			<div class="saveSettings">
-				<h1 class="settingsSave bold">Speichern</h1>
+				<h1 class="settingsSave bold">Speichern & Starten</h1>
 			</div>
 		</div>
 		<div class="viewContainer" style="display: none;">
